// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: show add modal 1`] = `
<div
  className="quality-gate-permissions"
>
  <h3
    className="spacer-bottom"
  >
    quality_gates.permissions
  </h3>
  <p
    className="spacer-bottom"
  >
    quality_gates.permissions.help
  </p>
  <div>
    <DeferredSpinner
      loading={false}
    >
      <ul>
        <li
          key="john.doe"
        >
          <PermissionItem
            item={
              Object {
                "active": true,
                "local": true,
                "login": "john.doe",
                "name": "John Doe",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
        <li
          key="group"
        >
          <PermissionItem
            item={
              Object {
                "name": "group",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
      </ul>
    </DeferredSpinner>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    quality_gates.permissions.grant
  </Button>
  <QualityGatePermissionsAddModal
    onClose={[MockFunction]}
    onSubmit={[MockFunction]}
    qualityGate={
      Object {
        "id": "1",
        "name": "qualitygate",
      }
    }
    submitting={false}
  />
</div>
`;

exports[`should render correctly: show remove modal for group 1`] = `
<div
  className="quality-gate-permissions"
>
  <h3
    className="spacer-bottom"
  >
    quality_gates.permissions
  </h3>
  <p
    className="spacer-bottom"
  >
    quality_gates.permissions.help
  </p>
  <div>
    <DeferredSpinner
      loading={false}
    >
      <ul>
        <li
          key="john.doe"
        >
          <PermissionItem
            item={
              Object {
                "active": true,
                "local": true,
                "login": "john.doe",
                "name": "John Doe",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
        <li
          key="group"
        >
          <PermissionItem
            item={
              Object {
                "name": "group",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
      </ul>
    </DeferredSpinner>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    quality_gates.permissions.grant
  </Button>
  <ConfirmModal
    confirmButtonText="remove"
    confirmData={
      Object {
        "name": "deletable group",
      }
    }
    header="quality_gates.permissions.remove.group"
    isDestructive={true}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
  >
    <FormattedMessage
      defaultMessage="quality_gates.permissions.remove.group.confirmation"
      id="remove.confirmation"
      values={
        Object {
          "user": <strong>
            deletable group
          </strong>,
        }
      }
    />
  </ConfirmModal>
</div>
`;

exports[`should render correctly: show remove modal for user 1`] = `
<div
  className="quality-gate-permissions"
>
  <h3
    className="spacer-bottom"
  >
    quality_gates.permissions
  </h3>
  <p
    className="spacer-bottom"
  >
    quality_gates.permissions.help
  </p>
  <div>
    <DeferredSpinner
      loading={false}
    >
      <ul>
        <li
          key="john.doe"
        >
          <PermissionItem
            item={
              Object {
                "active": true,
                "local": true,
                "login": "john.doe",
                "name": "John Doe",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
        <li
          key="group"
        >
          <PermissionItem
            item={
              Object {
                "name": "group",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
      </ul>
    </DeferredSpinner>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    quality_gates.permissions.grant
  </Button>
  <ConfirmModal
    confirmButtonText="remove"
    confirmData={
      Object {
        "login": "userlogin",
      }
    }
    header="quality_gates.permissions.remove.user"
    isDestructive={true}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
  >
    <FormattedMessage
      defaultMessage="quality_gates.permissions.remove.user.confirmation"
      id="remove.confirmation"
      values={
        Object {
          "user": <strong />,
        }
      }
    />
  </ConfirmModal>
</div>
`;

exports[`should render correctly: with no groups 1`] = `
<div
  className="quality-gate-permissions"
>
  <h3
    className="spacer-bottom"
  >
    quality_gates.permissions
  </h3>
  <p
    className="spacer-bottom"
  >
    quality_gates.permissions.help
  </p>
  <div>
    <DeferredSpinner
      loading={false}
    >
      <ul>
        <li
          key="john.doe"
        >
          <PermissionItem
            item={
              Object {
                "active": true,
                "local": true,
                "login": "john.doe",
                "name": "John Doe",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
      </ul>
    </DeferredSpinner>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    quality_gates.permissions.grant
  </Button>
</div>
`;

exports[`should render correctly: with no users 1`] = `
<div
  className="quality-gate-permissions"
>
  <h3
    className="spacer-bottom"
  >
    quality_gates.permissions
  </h3>
  <p
    className="spacer-bottom"
  >
    quality_gates.permissions.help
  </p>
  <div>
    <DeferredSpinner
      loading={false}
    >
      <ul>
        <li
          key="group"
        >
          <PermissionItem
            item={
              Object {
                "name": "group",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
      </ul>
    </DeferredSpinner>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    quality_gates.permissions.grant
  </Button>
</div>
`;

exports[`should render correctly: with no users or groups 1`] = `
<div
  className="quality-gate-permissions"
>
  <h3
    className="spacer-bottom"
  >
    quality_gates.permissions
  </h3>
  <p
    className="spacer-bottom"
  >
    quality_gates.permissions.help
  </p>
  <div>
    <DeferredSpinner
      loading={false}
    >
      <ul />
    </DeferredSpinner>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    quality_gates.permissions.grant
  </Button>
</div>
`;

exports[`should render correctly: with users and groups 1`] = `
<div
  className="quality-gate-permissions"
>
  <h3
    className="spacer-bottom"
  >
    quality_gates.permissions
  </h3>
  <p
    className="spacer-bottom"
  >
    quality_gates.permissions.help
  </p>
  <div>
    <DeferredSpinner
      loading={false}
    >
      <ul>
        <li
          key="john.doe"
        >
          <PermissionItem
            item={
              Object {
                "active": true,
                "local": true,
                "login": "john.doe",
                "name": "John Doe",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
        <li
          key="group"
        >
          <PermissionItem
            item={
              Object {
                "name": "group",
              }
            }
            onClickDelete={[MockFunction]}
          />
        </li>
      </ul>
    </DeferredSpinner>
  </div>
  <Button
    className="big-spacer-top"
    onClick={[MockFunction]}
  >
    quality_gates.permissions.grant
  </Button>
</div>
`;
